fix topand bottom spacing of ul li

--- a/sass/styles.scss
+++ b/sass/styles.scss
@@ -276,7 +276,7 @@ ol {
     }    
 }
 //===============
-.home-blog-list ul, .blog-list ul{
+.home-blog-list ul/*, .blog-list ul*/{
     padding: 0;
     padding-inline-start: 1rem;
 }
@@ -287,8 +287,13 @@ time.blog-post-date {
     display: block;
     margin-block-start: -0.6rem;
 }
-.blog-list ul li, .home-blog-list ul li{
+
+//.blog-list ul li, 
+.home-blog-list ul li{
     list-style-type: none;
+   position: relative;
+    right: 1rem;
+    padding-block: .5rem;    
 }
 time.blog-list-date{
     font-size: 70%;
@@ -298,6 +303,7 @@ time.blog-list-date{
 }
 
 .home-blog-list ul li, .blog-list ul li{
+    padding-block: 0.4rem;
     
     /*
     list-style-image: url('data:image/svg+xml,<svg xmlns="http://www.w3.org/2000/svg" height="10" width="6.25" viewBox="0 0 320 512"><!--!Font Awesome Free 6.7.2 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free Copyright 2024 Fonticons, Inc.--><path fill="%23f03838" d="M310.6 233.4c12.5 12.5 12.5 32.8 0 45.3l-192 192c-12.5 12.5-32.8 12.5-45.3 0s-12.5-32.8 0-45.3L242.7 256 73.4 86.6c-12.5-12.5-12.5-32.8 0-45.3s32.8-12.5 45.3 0l192 192z"/></svg>');
@@ -323,9 +329,7 @@ time.blog-list-date{
     */
 
   
-    position: relative;
-    right: 1rem;
-    padding-block: .5rem;
+ 
 }
 
 footer {
